Remove unnecessary div.
Fixes the MIDI device selection dropdown alignment.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -934,11 +934,9 @@ customElements.define('x-checkbox', class extends HTMLElement {
     </div>
     <div id="grid-control" class="grid-container">
         <div>Interface</div>
-        <div>
-            <select id="midiInterface" onchange="selectedInterface(this.value);">
-                <option>Select MIDI interface</option>
-            </select>
-        </div>
+        <select id="midiInterface" onchange="selectedInterface(this.value);">
+            <option value="select">Select MIDI interface</option>
+        </select>
         <div id="connection">🔴</div>
 
         <div>Sound</div>
