Add empty column after MIDI device selection.
Provide better separation for touch devices.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -939,6 +939,10 @@ customElements.define('x-checkbox', class extends HTMLElement {
         </select>
         <div id="connection">🔴</div>
 
+        <div></div>
+        <div></div>
+        <div></div>
+
         <div>Sound</div>
         <x-select name="tone"></x-select>
         <div></div>
