--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1245,8 +1245,9 @@ customElements.define('x-checkbox', class extends HTMLElement {
         <div></div>
         <div>
             <p>
-                The FP-30 Remote Control uses WebMIDI to connect to a Roland
-                FP-30 instrument and control its dashboard settings.
+                The FP-30 Remote Control uses WebMIDI / Web Bluetooth to
+                connect to a Roland FP-30 instrument and control its dashboard
+                settings.
             </p>
             <p>
                 It is self-contained, so you can save this page locally and
