--- a/index.html
+++ b/index.html
@@ -77,16 +77,11 @@ b {
                     WebKit)</li>
             </ul>
         <p>
-            The page uses cookies to store
+            The page uses the browsers local storage to store
         </p>
             <ul>
                 <li>selected MIDI device: (try to) reconnect on load.</li>
             </ul>
-        <p>
-            Cookies are not supported for local files. This is a browser
-            limitation; when using from a local copy cookie functionality will
-            not work.
-        </p>
         <p>
             This is considered experimental.
             <em>It has only been tested with the FP-30.</em>
