--- a/fp30remote.html
+++ b/fp30remote.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light">
+        <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
+        <link rel="manifest" href="manifest.json">
 
     <style>
 body {
