--- a/fp30remote.html
+++ b/fp30remote.html
@@ -12,7 +12,7 @@
 
     <style>
 body {
-    font-family: "DejaVu Sans";verdana,sans-serif
+    font-family: "DejaVu Sans", verdana, sans-serif;
     font-size: 14pt;
     user-select: none;
     background: #fff;
