Shorten site header title.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1134,7 +1134,7 @@ customElements.define('x-checkbox', class extends HTMLElement {
 
 </head>
 <body onload="setup();">
-    <h2>FP-30 Remote Control</h2>
+    <h2>FP-30 Remote</h2>
     <div style="padding-bottom:20px;">
     <span id='tab-control' class="tabbutton" onclick="toggleGrid('control')">Control</span>
     <span id='tab-extra' class="tabbutton" onclick="toggleGrid('extra')">Extra</span>
