--- a/fp30remote.html
+++ b/fp30remote.html
@@ -8,6 +8,7 @@
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light"/>
         <meta name="theme-color" content="#464ba3"/>
+        <link rel="apple-touch-icon" sizes="128x128" href="icon-128.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
         <link rel="manifest" href="manifest.json">
 
