Change the dropdown default to "not connected."
Make it clear that by default no device is connected, and selecting this
will also disconnect.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1144,7 +1144,7 @@ customElements.define('x-checkbox', class extends HTMLElement {
     <div id="grid-control" class="grid-container">
         <div>Interface</div>
         <select id="midiInterface" onchange="selectedInterface(this.value);">
-            <option value="select">Select MIDI interface</option>
+            <option value="select">Not connected</option>
         </select>
         <div id="connection">🔴</div>
 
