Fix misalignment of metronome dropdown.
Grouping the two dropdown elements in a div will cause misalingment. Use
a span instead.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1160,10 +1160,10 @@ customElements.define('x-checkbox', class extends HTMLElement {
         <div id="volume_text">100</div>
 
         <div>Metronome</div>
-        <div>
+        <span>
             <x-select name="metronome_beats"></x-select>
             <x-select name="metronome_named" for="metronome_speed"></x-tempi>
-        </div>
+        </span>
         <x-checkbox name="metronome_status" value="0"></x-checkbox>
 
         <div>Metronome</div>
