Rename MIDI interface to Instrument.
While it's technically the interface it's clearer to consider it the
instrument, since that only has one interface.

--- a/fp30remote.html
+++ b/fp30remote.html
@@ -1142,7 +1142,7 @@ customElements.define('x-checkbox', class extends HTMLElement {
     <span id='tab-about' class="tabbutton" onclick="toggleGrid('about')">About</span>
     </div>
     <div id="grid-control" class="grid-container">
-        <div>Interface</div>
+        <div>Instrument</div>
         <select id="midiInterface" onchange="selectedInterface(this.value);">
             <option value="select">Not connected</option>
         </select>
