--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="color-scheme" content="dark light">
+        <link rel="apple-touch-icon" sizes="128x128" href="icon-128.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
+        <link rel="manifest" href="manifest.json">
     <style>
 body {
     font-family: verdana,sans-serif;
